--- a/Web Chat/referrer_activation.html
+++ b/Web Chat/referrer_activation.html
@@ -7,7 +7,7 @@
 <script src="https://app.xenioo.com/webchatsrc/xeniooweb.js"></script>
 <script>
     
-    if( document.referrer.indexOf( "" ) )
+    if( document.referrer.indexOf( "CALLING_LINK_URL" ) )
         Xenioo( "YOUR_CHATBOT_KEY" );
         
 </script>
