--- a/Web Chat/callback_events_example.html
+++ b/Web Chat/callback_events_example.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 			<title>Xenioo - Callback Events</title>
-			<script src="https://app.xenioo.com/webchatsrc/xenioowebchat.js"></script>
+			<script src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 			<style>
 			
