new static web chat url

--- a/Web Chat/referrer_activation.html
+++ b/Web Chat/referrer_activation.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<script src="https://app.xenioo.com/webchatsrc/xenioowebchat.js"></script>
+<script src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
 <script>
     
     if( document.referrer.indexOf( "CALLING_LINK_URL" ) )
