new static web chat url

--- a/Web Chat/user_ip_informations.html
+++ b/Web Chat/user_ip_informations.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://app.xenioo.com/webchatsrc/xenioowebchat.js"></script>
+<script src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
 <script>
     
     $.getJSON('http://gd.geobytes.com/GetCityDetails?callback=?', function(data) {
