--- a/Web Chat/initialize_with_variables.html
+++ b/Web Chat/initialize_with_variables.html
@@ -4,14 +4,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<script src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
+<script data-id='xenioo' data-node='app' src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
 <script>
-    Xenioo( "YOUR_CHATBOT_KEY", 
-            {
-              variables:[  
-                  { Name: "user_name", Value: "<?= $_SESSION['user_name']; ?>" }
-              ]
-            });
+    xenioowebchat.Start(
+        "YOUR_CHATBOT_KEY", 
+        {
+          variables:[  
+              { Name: "user_name", Value: "<?= $_SESSION['user_name']; ?>" }
+          ]
+        }
+    );
 </script>
 </body>
 </html>
