--- a/Web Chat/home_page_different_activation.html
+++ b/Web Chat/home_page_different_activation.html
@@ -4,17 +4,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<script src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
+<script data-id='xenioo' data-node='app' src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
 <script>
-    
-    if( document.location.href == "full homepage url" ){
-        Xenioo( "YOUR_CHATBOT_KEY" );
-    } else {
-        Xenioo( "YOUR_CHATBOT_KEY",{
-	   chatdelay:0
-        });
-    }
-        
+	if (document.location.href == "full homepage url") {
+        	xenioowebchat.Start("YOUR_CHATBOT_KEY" );
+    	} else {
+        	xenioowebchat.Start("YOUR_CHATBOT_KEY", {
+	   		chatdelay:0
+        	});
+    	}
 </script>
 </body>
 </html>
